<resources>
    <string name="app_name">Dayin</string>
    <string name="smdSText">일정</string>
    <string name="smdMText">가계부</string>
    <string name="smdDText">다이어리</string>
    <string name="yearMonth">0000년 00월</string>
    <string name="nTitle">제목 없음</string>
    <string name="menu_home">홈</string>
    <string name="menu_money">소비 분석</string>
    <string name="menu_memo">메모</string>
    <string name="menu_menu">메뉴</string>
    <string name="monYear">00월 00일 (월)</string>
    <string name="title">제목</string>
    <string name="titleHint">제목 입력</string>
    <string name="auto">자동 등록</string>
    <string name="autoDefault">없음</string>
    <string name="autoWeek">매주</string>
    <string name="autoMonth">매달</string>
    <string name="autoYear">매년</string>
    <string name="time">시간 등록</string>
    <string name="timeHint">00</string>
    <string name="timeAm">AM</string>
    <string name="timePm">PM</string>
    <string name="notify">알림 설정</string>
    <string name="notiDay">하루 전</string>
    <string name="notiHour">1시간 전</string>
    <string name="notiMin">30분 전</string>
    <string name="loc">장소 등록</string>
    <string name="locHint">주소 입력</string>
    <string name="memoHint">메모</string>
    <string name="memo_plus">추가</string>
    <string name="memo_delete">휴지통</string>
    <string name="memo_check">선택</string>
    <string name="value_error">올바르지 않은 값입니다.</string>
    <string name="auto_info1">매주, 매달, 매년 간격으로 일정이 자동 등록돼요!</string>
    <string name="auto_money">매주, 매달, 매년 간격으로 수입 또는 지출이 자동 등록돼요!</string>
    <string name="auto_info2">하루 전, 1시간 전, 30분 전에 팝업창을 통하여 미리 알림이 와요!</string>
    <string name="star">이 날짜를 중요한 날로 등록합니다</string>
    <string name="star_cancel">이 날짜를 중요한 날에서 제외합니다</string>
    <string name="testMedium">이것은 테스트용 텍스트입니다.</string>
    <string name="testLong">이것은 테스트용 텍스트입니다. 이건 좀 길다란 텍스트 버전입니다.</string>
    <string name="blue_color">파란색</string>
    <string name="red_color">빨간색</string>
    <string name="gray_color">회색</string>
    <string name="yellow_color">노란색</string>
    <string name="purple_color">보라색</string>
    <string name="green_color">녹색</string>
    <string name="text_type">가</string>
    <string name="text_font">글꼴</string>
    <string name="info">Info</string>
    <string name="money">금액</string>
    <string name="moneyHint">100000</string>
    <string name="plus">수익</string>
    <string name="minus">지출</string>
    <string name="autoTitle">자동 등록 제목</string>
    <string name="autoHint">예시 : 월세, 급여 등</string>
    <string name="catePlus">+ 카테고리 추가</string>
    <string name="cateMinus">- 카테고리 제거</string>
    <string name="addCate">카테고리 이름 입력</string>
    <string name="autoMoneyCount">자동 등록된 항목</string>
    <string name="moneyCount">등록된 항목</string>
    <string name="cateDel">삭제할 사용자 카테고리 선택</string>
    <string name="cateDelWarning">카테고리 삭제 시 해당 카테고리로 등록된 모든 항목과 자동 등록이 삭제됩니다</string>
    <string name="cateDelRe">정말 삭제하시겠습니까?</string>
    <string name="choiceCateList">선택한 카테고리 목록</string>
    <string name="check">확인</string>
    <string name="cancel">취소</string>
    <string name="wallet">이번 달 합계</string>
    <string name="monYearPickerBar">날짜 선택</string>
    <string name="monYearPicker">0000년 00월</string>
    <string name="fontText">글꼴</string>
    <string name="colorText">색상</string>
    <string name="styleText">스타일</string>
    <string name="defaultText">가</string>
    <string name="cate">카테고리</string>
    <string name="cateManage">소비 분석 관리</string>
    <string name="autoManage">고정 지출</string>
    <string name="autoTotal">지금까지의 총액</string>


    <string name="app_action_bar_text">My Note</string>
    <string name="back">back</string>
    <string name="save">save</string>
    <string name="note">Note</string>
    <string name="some_text">Lorem Ipsum is simply dummy text of
        the printing and typesetting industry. Lorem Ipsum has been
        the industry\'s standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled
        it to make a type specimen book. It has survived not only five
        centuries, but also the leap into electronic typesetting,
        remaining essentially unchanged.
    </string>
    <string name="this_is_a_title">What is Lorem Ipsum?</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="edited_on">Edited on: %1$s</string>
    <string name="search_here">Search Here…</string>
    <string name="clear">clear</string>
    <string name="choose_color">Select Color</string>
    <string name="add_note">Add Note</string>
    <string name="no_data_image">no data image</string>
    <string name="noteContentImage">NoteContentImage</string>
    <string name="add_image">Take Picture</string>
    <string name="delete">Delete</string>
    <string name="fileAuthority">com.gamdestroyerr.roomnote.fileProvider</string>
    <string name="select_image">Select Image</string>
    <string name="fab">fab</string>
    <string name="short_label">New Note</string>
    <string name="long_label">Add New Note</string>
    <string name="disabled_message">New Note Shortcut Disabled</string>
    <string name="delete_fab">deleteFab</string>
</resources>