<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="25dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cateDelRe"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/okticon_regular"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/gray"
        android:textSize="15sp"
        android:text="@string/choiceCateList"
        android:fontFamily="@font/okticon_regular"
        android:padding="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/time_back"/>
    <TextView
        android:id="@+id/cateList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/gray"
        android:textSize="15sp"
        android:text="@string/testLong"
        android:fontFamily="@font/okticon_regular"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginBottom="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.widget.Button
            android:id="@+id/checkButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/check"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:fontFamily="@font/okticon_regular"
            android:textSize="14sp"
            android:layout_gravity="center"/>
        <android.widget.Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:fontFamily="@font/okticon_regular"
            android:textSize="14sp"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>