<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:id="@+id/monYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5.5"
            android:layout_marginStart="15dp"
            android:layout_gravity="center"
            android:fontFamily="@font/okticon_regular"
            android:text="@string/monYear"
            android:textSize="20sp" />

        <android.widget.Button
            android:id="@+id/checkButton"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:background="@drawable/check_icon"
            android:layout_marginEnd="15dp"/>

        <android.widget.Button
            android:id="@+id/closeButton"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:background="@drawable/close_icon"
            android:layout_marginEnd="15dp"/>
    </LinearLayout>

    <View
        android:id="@id/line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/darkGray" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:minHeight="500dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/okticon_regular"
                android:text="@string/title"
                android:textSize="18sp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp" />
            <EditText
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/okticon_regular"
                android:maxLines="1"
                android:textSize="14sp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="15dp"
                android:inputType="text"
                android:hint="@string/titleHint"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="15dp"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/okticon_regular"
                    android:text="@string/auto"
                    android:textSize="18sp"
                    android:layout_marginEnd="5dp"/>
                <android.widget.Button
                    android:id="@+id/infoButton1"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/info_icon"
                    android:layout_marginEnd="50dp"/>
            </LinearLayout>
            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/autoToggle"
                android:layout_width="200dp"
                android:layout_height="40dp"
                app:checkedButton="@id/autoDefault"
                app:singleSelection="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                app:selectionRequired="true">
                <Button
                    android:id="@+id/autoDefault"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/autoDefault"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly" />
                <Button
                    android:id="@+id/autoWeek"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/autoWeek"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly" />
                <Button
                    android:id="@+id/autoMon"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/autoMonth"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly" />
                <Button
                    android:id="@+id/autoYear"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/autoYear"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly" />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="15dp"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/okticon_regular"
                    android:text="@string/time"
                    android:textSize="18sp"
                    android:layout_marginEnd="5dp"/>
                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/timeSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:trackTint="@drawable/switch_track"
                    app:thumbTint="@drawable/switch_thumb" />
            </LinearLayout>

            <!--여기부터 시간 활성화 레이아웃 -->
            <LinearLayout
                android:id="@+id/timeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:orientation="vertical"
                android:visibility="gone">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_vertical">
                    <EditText
                        android:id="@+id/timeHour"
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:hint="@string/timeHint"
                        android:background="@drawable/time_back"
                        android:fontFamily="@font/okticon_regular"
                        android:textAlignment="center"
                        android:inputType="number"
                        android:maxLines="1"
                        android:maxLength="2"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/okticon_regular"
                        android:text=":"
                        android:textSize="40sp"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="15dp"/>
                    <EditText
                        android:id="@+id/timeMin"
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:hint="@string/timeHint"
                        android:background="@drawable/time_back"
                        android:fontFamily="@font/okticon_regular"
                        android:textAlignment="center"
                        android:inputType="number"
                        android:maxLines="1"
                        android:maxLength="2"/>
                    <com.google.android.material.button.MaterialButtonToggleGroup
                        android:id="@+id/timeAmPm"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        app:checkedButton="@id/timeAm"
                        app:singleSelection="true"
                        android:layout_marginStart="28dp"
                        app:selectionRequired="true">
                        <Button
                            android:id="@+id/timeAm"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/timeAm"
                            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                            android:maxLines="1" />
                        <Button
                            android:id="@+id/timePm"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/timePm"
                            style="@style/Widget.App.Button.OutlinedButton.IconOnly" />
                    </com.google.android.material.button.MaterialButtonToggleGroup>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/okticon_regular"
                        android:text="@string/notify"
                        android:textSize="18sp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="5dp"/>
                    <android.widget.Button
                        android:id="@+id/infoButton2"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/info_icon" />
                </LinearLayout>
                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/notify"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    app:checkedButton="@id/notiDefault"
                    app:singleSelection="true"
                    app:selectionRequired="true">
                    <Button
                        android:id="@+id/notiDefault"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/autoDefault"
                        android:textSize="12sp"
                        style="@style/Widget.App.Button.OutlinedButton.IconOnly" />
                    <Button
                        android:id="@+id/notiDay"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/notiDay"
                        android:textSize="12sp"
                        style="@style/Widget.App.Button.OutlinedButton.IconOnly" />
                    <Button
                        android:id="@+id/notiHour"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/notiHour"
                        android:textSize="12sp"
                        style="@style/Widget.App.Button.OutlinedButton.IconOnly" />
                    <Button
                        android:id="@+id/notiMin"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/notiMin"
                        android:textSize="12sp"
                        style="@style/Widget.App.Button.OutlinedButton.IconOnly" />
                </com.google.android.material.button.MaterialButtonToggleGroup>
            </LinearLayout>

            <!-- 메모 -->
            <EditText
                android:id="@+id/memoText"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="20dp"
                android:textSize="15sp"
                android:hint="@string/memoHint"
                android:background="@drawable/time_back"
                android:fontFamily="@font/okticon_regular"
                android:padding="8dp"
                android:textAlignment="viewStart"
                android:scrollbars="vertical"
                android:gravity="top|start"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>